# scoop-bucket

./: .gitignore  Cargo.toml  LICENSE  README.md  update.sh
.github/workflows/: auto-update.yml  release.yml
auto-update/: Cargo.toml
auto-update/src/: main.rs
bucket/: chnroutes-rs.json  fuck-delete-it.json  git-simple-encrypt.json  openppp2-client.json  urldecoder.json  wordinfo.json  wordsreciter.json
