[package]
name = "auto-update"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
die-exit = "0.5.0"
json = "0.12.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = { version = "1.0.116", features = ["preserve_order"] }
tokio = { version = "1.37.0", features = ["macros", "fs", "rt-multi-thread"] }
